// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerMenu matches the last snapshot 1`] = `
<View>
  <View>
    <Image
      source={
        Object {
          "uri": "someurl",
        }
      }
    />
    <Text>
      foo
    </Text>
    <ForwardRef
      hitSlop={
        Object {
          "bottom": 5,
          "left": 10,
          "right": 10,
          "top": 5,
        }
      }
      onPress={[MockFunction]}
    >
      <Icon
        name="Settings"
      />
      <Text>
        Settings
      </Text>
    </ForwardRef>
  </View>
  <SectionList
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": undefined,
          "keyExtractor": [Function],
          "renderItem": [Function],
        },
        Object {
          "data": undefined,
          "keyExtractor": [Function],
          "label": "My Groups",
          "renderItem": [Function],
        },
      ]
    }
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <Button
    text="Create a Group"
  />
  <View>
    <ForwardRef
      onPress={[Function]}
    >
      <Image
        source={
          Object {
            "uri": "http://anyurl",
          }
        }
      />
    </ForwardRef>
    <View>
      <Text
        numberOfLines={1}
      >
        Hello, 
        Roy Rogers
        !
      </Text>
      <View>
        <TextButton
          onPress={[Function]}
          text="Settings"
        />
      </View>
    </View>
  </View>
  <Memo(Connect(SocketListener)) />
</View>
`;

exports[`GroupRow hides badge when no newPostCount 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </ForwardRef>
</View>
`;

exports[`GroupRow highlights when matching currentGroupId 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </ForwardRef>
</View>
`;

exports[`GroupRow matches the last snapshot 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
    <View>
      <Text>
        7
      </Text>
    </View>
  </ForwardRef>
</View>
`;

exports[`SectionHeader matches the last snapshot 1`] = `
<View>
  <Text>
    NETWORKED GROUPS
  </Text>
</View>
`;

exports[`TextButton renders 1`] = `
<ForwardRef
  hitSlop={
    Object {
      "bottom": 10,
      "left": 10,
      "right": 15,
      "top": 20,
    }
  }
  onPress={[Function]}
>
  <Text>
    anything
  </Text>
</ForwardRef>
`;
